Code editor: fix toolbar buttons being hidden on small window sizes

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -246,7 +246,7 @@ body {
 }
 
 .dock-manager {
-    top: 26px !important;
+    top: 26px;
     bottom: 20px;
 }
 
